feat: resolve like post error